--- a/contact.html
+++ b/contact.html
@@ -167,7 +167,7 @@
             <button class="btn btn-primary" type="button" id="send-another-message">Envoyer un autre message</button>
           </div>
 
-          <form id="contact-form" method="POST" action="contact.php" class="contact-form">
+          <form id="contact-form" method="POST" action="contact.php" class="contact-form" enctype="application/x-www-form-urlencoded">
             <div class="form-group">
               <label for="firstName" class="text-secondary">Prénom</label>
               <input type="text" class="form-control" id="firstName" name="firstName" placeholder="Votre prénom" required>
