--- a/contact.html
+++ b/contact.html
@@ -167,7 +167,7 @@
             <button class="btn btn-primary" type="button" id="send-another-message">Envoyer un autre message</button>
           </div>
 
-          <form id="contact-form" name="contact" data-netlify="true class="contact-form" >
+          <form id="contact-form" name="contact" netlify="true" class="contact-form"> >
             <div class="form-group">
               <label for="firstName" class="text-secondary">Prénom</label>
               <input type="text" class="form-control" id="firstName" name="firstName" placeholder="Votre prénom" required>
