--- a/solution.html
+++ b/solution.html
@@ -76,7 +76,7 @@
 <section class="figma-section py-5">
   <div class="container">
     <div class="row align-items-center">
-      <!-- IMAGE : d-md-none pour mobile, order-last -->
+      <!-- IMAGE : version mobile uniquement -->
       <div class="col-12 d-md-none order-last image-container mb-4">
         <img src="image/appli.png" alt="Interface TalentAI" class="img-fluid rounded">
       </div>
@@ -102,6 +102,7 @@
     </div>
   </div>
 </section>
+
 
 
       <!-- Notre Approche -->
