--- a/index.html
+++ b/index.html
@@ -78,21 +78,27 @@
       <div class="row">
         <div class="col-md-4">
           <div class="avantage">
-            <div class="icon" aria-hidden="true"></div>
+            <div class="icon" aria-hidden="true">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-cyan-600"><path d="M12 2v4"></path><path d="M12 18v4"></path><path d="m4.93 4.93 2.83 2.83"></path><path d="m16.24 16.24 2.83 2.83"></path><path d="M2 12h4"></path><path d="M18 12h4"></path><path d="m4.93 19.07 2.83-2.83"></path><path d="m16.24 7.76 2.83-2.83"></path></svg>
+            </div>
             <h3>Gain de temps</h3>
             <p>Réduisez de 70% le temps consacré au tri des CV et à la présélection des candidats.</p>
           </div>
         </div>
         <div class="col-md-4">
           <div class="avantage">
-            <div class="icon" aria-hidden="true"></div>
+            <div class="icon" aria-hidden="true">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-cyan-600"><path d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M22 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg>
+            </div>
             <h3>Meilleurs recrutements</h3>
             <p>Augmentez de 40% la qualité de vos recrutements grâce à notre algorithme de matching avancé.</p>
           </div>
         </div>
         <div class="col-md-4">
           <div class="avantage">
-            <div class="icon" aria-hidden="true"></div>
+            <div class="icon" aria-hidden="true">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-cyan-600"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10"></path></svg>
+            </div>
             <h3>Recrutement éthique</h3>
             <p>Éliminez les biais inconscients et favorisez la diversité dans vos équipes.</p>
           </div>
