--- a/index.html
+++ b/index.html
@@ -116,7 +116,10 @@
       <div class="row">
         <div class="col-md-4">
           <div class="expertise">
-            <div class="icon" aria-hidden="true"></div>
+            <div class="icon" aria-hidden="true">
+              <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-cyan-600">
+                <path d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M22 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg>
+            </div>
             <h3>Recrutement inclusif</h3>
             <p>Notre IA est conçue pour éliminer les biais inconscients et favoriser la diversité dans vos équipes.</p>
           </div>
