--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <!-- Logo -->
       <div class="logo">
         <a href="index.html">
-          <img src="image/talentAI.png" alt="Logo TalentAI">
+          <img src="./image/talentAI.png" alt="Logo TalentAI">
         </a>
       </div>
 
@@ -65,7 +65,7 @@
         <a href="solution.html" class="btn btn-primary">Découvrir la solution</a>
       </div>
       <div class="image-container">
-        <img src="image/talentai.png" alt="Illustration TalentAI" class="img-fluid">
+        <img src="./image/talentai.png" alt="Illustration TalentAI" class="img-fluid">
       </div>
     </div>
   </section>
@@ -146,7 +146,7 @@
   <section class="section-cas-utilisation py-5" aria-labelledby="titre-cas">
     <div class="container d-flex flex-column flex-md-row justify-content-between align-items-center">
       <div class="image-container mb-4 mb-md-0">
-        <img src="image/candidat.jpg" alt="Illustration du cas d'utilisation Plurielles" class="img-reduite">
+        <img src="./image/candidat.jpg" alt="Illustration du cas d'utilisation Plurielles" class="img-reduite">
       </div>
       <div class="text-content">
         <div class="tag">Cas d'utilisation</div>
