--- a/index.html
+++ b/index.html
@@ -126,14 +126,17 @@
         </div>
         <div class="col-md-4">
           <div class="expertise">
-            <div class="icon" aria-hidden="true"></div>
+            <div class="icon" aria-hidden="true">
+              <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-cyan-600"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>
+            </div>
             <h3>Analyse prédictive RH</h3>
             <p>Anticipez les besoins en recrutement et optimisez la gestion des talents grâce à notre IA.</p>
           </div>
         </div>
         <div class="col-md-4">
           <div class="expertise">
-            <div class="icon" aria-hidden="true"></div>
+            <div class="icon" aria-hidden="true"> <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-cyan-600"><path d="M14.5 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7.5L14.5 2z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><line x1="10" y1="9" x2="8" y2="9"></line></svg>
+            </div>
             <h3>Automatisation des processus</h3>
             <p>Simplifiez vos processus RH grâce à l'automatisation des tâches répétitives.</p>
           </div>
